k8s/istio/peer-authentication.yaml
# Istio PeerAuthentication - mTLS 설정
# 네임스페이스 내 모든 서비스 간 통신에 mTLS 적용
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: jaehyeong-tech-dev
spec:
  mtls:
    mode: STRICT
---
# PostgreSQL에 대한 PERMISSIVE mTLS (외부 접근 허용)
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-auth
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-blog-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-blog
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-comment-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-comment
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-storage-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-storage
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-page-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-page
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-analytics-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: postgres-analytics
  mtls:
    mode: PERMISSIVE
---
# RabbitMQ에 대한 PERMISSIVE mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: rabbitmq-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: rabbitmq
  mtls:
    mode: PERMISSIVE
---
# Redis에 대한 PERMISSIVE mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: redis-permissive
  namespace: jaehyeong-tech-dev
spec:
  selector:
    matchLabels:
      app: redis
  mtls:
    mode: PERMISSIVE
